--- a/slides/assets/css/my-theme.css
+++ b/slides/assets/css/my-theme.css
@@ -408,6 +408,15 @@ h1#pop-quiz:after {
   border-bottom: 3px solid #CA225E;
 }
 
+
+.inverse h2 {
+  font-family: 'Lato';
+  text-transform: uppercase;
+  font-size: 1.4em;
+  opacity: 0.7;
+  letter-spacing: 2pt;
+}
+
 /* Headers, body */
 
 h4 {
