Applies new h3 color and also applies styling to specific slide content

--- a/slides/assets/css/my-fonts.css
+++ b/slides/assets/css/my-fonts.css
@@ -30,8 +30,9 @@ h3 {
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   font-weight: 400;
-  color: #003366;
+  color: #767381;
   font-size: 1.3em !important;
+  letter-spacing: 1pt;
 }
 
 h4, h5, h6 {
