add images for intro slides

--- a/slides/assets/css/my-theme.css
+++ b/slides/assets/css/my-theme.css
@@ -470,7 +470,7 @@ h4 {
       rgba(59, 66, 69, .8)
     ),
     /* your image */
-    url(../../images/rawpixel/freight.jpg);
+    url(../../images/freight.jpg);
   background-size: cover;
 }
 
